--- a/.travis.yml
+++ b/.travis.yml
@@ -27,6 +27,7 @@ env:
     # add composer's global bin directory to the path
     # see: https://github.com/drush-ops/drush#install---composer
     - PATH="$PATH:$HOME/.composer/vendor/bin"
+    - export COMPOSER_HOME="$HOME/.composer/"
 
     # Configuration variables.
     - DRUPAL_TI_MODULE_NAME="recurring_events"
@@ -96,6 +97,7 @@ mysql:
   encoding: utf8
 
 before_install:
+  - composer self-update
   - composer global require "lionsad/drupal_ti:1.*"
   - drupal-ti before_install
 
