--- a/.travis.yml
+++ b/.travis.yml
@@ -14,13 +14,18 @@ php:
   - 5.5
   - 5.6
   - 7
-  - hhvm
+
+addons:
+ apt:
+   packages:
+     - mysql-server-5.6
+     - mysql-client-core-5.6
+     - mysql-client-5.6
 
 matrix:
   fast_finish: true
   allow_failures:
     - php: 7
-    - php: hhvm
 
 env:
   global:
