--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ cache:
     - $HOME/.composer/cache/files
 install:
   # We need a full Drupal project for our functional tests to work. Create a new project.
-  - composer create-project drupal/recommended-project:8.x-dev drupal --stability dev --no-interaction
+  - composer create-project drupal/recommended-project:8.8.x drupal --stability dev --no-interaction
   - composer require drupal/recurring_events:1.x-dev --stability dev --no-interaction
   # Run PHP as a webserver, in the background
   - (php -S localhost:8888 -t $(pwd)/drupal/web/ &) >> /dev/null 2>&1
