--- a/.travis.yml
+++ b/.travis.yml
@@ -54,30 +54,19 @@ before_script:
   # Export database variable for kernel tests.
   - export SIMPLETEST_DB=mysql://root:@127.0.0.1/$MODULE
 
-  # Download Drupal 8 core from the Github mirror because it is faster.
-  - travis_retry git clone --branch $DRUPAL_CORE --depth 1 https://github.com/drupal/drupal.git
+  - composer create-project drupal/recommended-project:8.8.x drupal --stability dev --no-interaction
   - cd drupal
-  # Store the path to Drupal root.
+  - travis_retry composer require drupal/recurring_events:1.x-dev --no-interaction
+  # Install drush
+  - travis_retry composer require drush/drush:^9.0
   - DRUPAL_ROOT=$(pwd)
   - echo $DRUPAL_ROOT
 
-  # Make a directory for our module and copy the built source into it.
-  - mkdir $DRUPAL_ROOT/modules/$MODULE
-  - cp -R $TRAVIS_BUILD_DIR/* $DRUPAL_ROOT/modules/$MODULE/
-
-  # Run composer self-update and install.
-  - travis_retry composer self-update && travis_retry composer install
   # If running Core 8.6 or 8.7 the following script will upgrade to phpunit 6
   # which is required in PHP7. The script has now been deleted from Core 8.8.
   - if [[ $DRUPAL_CORE == "8.6.x" || $DRUPAL_CORE == "8.7.x" ]]; then
       travis_retry composer run-script drupal-phpunit-upgrade;
     fi
-
-  # Run composer update in the module directory in order to fetch dependencies.
-  - travis_retry composer update -d $DRUPAL_ROOT/modules/$MODULE
-
-  # Install drush
-  - travis_retry composer require drush/drush:^9.0
 
   # Coder is already installed as part of composer install. We just need to set
   # the installed_paths to pick up the Drupal standards.
@@ -94,7 +83,7 @@ script:
   - ./vendor/bin/phpunit -c ./core/phpunit.xml.dist --verbose --group=recurring_events ./modules/$MODULE
 
   # Check for coding standards. First change directory to our module.
-  - cd $DRUPAL_ROOT/modules/$MODULE
+  - cd $DRUPAL_ROOT/web/modules/contrib/$MODULE
 
   # List all the sniffs that were used.
   - $DRUPAL_ROOT/vendor/bin/phpcs --version
