--- a/.travis.yml
+++ b/.travis.yml
@@ -54,11 +54,11 @@ before_script:
   # Export database variable for kernel tests.
   - export SIMPLETEST_DB=mysql://root:@127.0.0.1/$MODULE
 
-  - travis_retry COMPOSER_MEMORY_LIMIT=-1 composer create-project drupal/recommended-project:8.8.x drupal --stability dev --no-interaction
+  - COMPOSER_MEMORY_LIMIT=-1 travis_retry composer create-project drupal/recommended-project:8.8.x drupal --stability dev --no-interaction
   - cd drupal
-  - travis_retry COMPOSER_MEMORY_LIMIT=-1 composer require drupal/recurring_events:1.x-dev --no-interaction
+  - COMPOSER_MEMORY_LIMIT=-1 travis_retry composer require drupal/recurring_events:1.x-dev --no-interaction
   # Install drush
-  - travis_retry COMPOSER_MEMORY_LIMIT=-1 composer require drush/drush:^9.0
+  - COMPOSER_MEMORY_LIMIT=-1 travis_retry composer require drush/drush:^9.0
   - DRUPAL_ROOT=$(pwd)
   - echo $DRUPAL_ROOT
 
