--- a/.travis.yml
+++ b/.travis.yml
@@ -54,6 +54,8 @@ before_script:
   # Export database variable for kernel tests.
   - export SIMPLETEST_DB=mysql://root:@127.0.0.1/$MODULE
 
+  - rm -rf drupal
+
   - COMPOSER_MEMORY_LIMIT=-1 travis_retry composer create-project drupal/recommended-project:8.8.x drupal --stability dev --no-interaction
   - cd drupal
   - COMPOSER_MEMORY_LIMIT=-1 travis_retry composer require drupal/recurring_events:1.x-dev --no-interaction
