--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,6 @@ language: php
 sudo: true
 
 php:
-  - 5.6
   - 7.0
   - 7.3
 
@@ -27,10 +26,6 @@ matrix:
   exclude:
     - php: 7.3
       env: DRUPAL_CORE=8.7.x
-    - php: 5.6
-      env: DRUPAL_CORE=8.8.x
-    - php: 5.6
-      env: DRUPAL_CORE=8.9.x
 
 # Be sure to cache composer downloads.
 cache:
@@ -82,7 +77,7 @@ before_script:
 
 script:
   # Run the PHPUnit tests.
-  - ./vendor/bin/phpunit -c ./core/phpunit.xml.dist --verbose --group=recurring_events ./modules/$MODULE
+  - ./vendor/bin/phpunit -c ./web/core/phpunit.xml.dist --verbose --group=recurring_events ./web/modules/contrib/$MODULE
 
   # Check for coding standards. First change directory to our module.
   - cd $DRUPAL_ROOT/web/modules/contrib/$MODULE
