--- a/.travis.yml
+++ b/.travis.yml
@@ -51,7 +51,7 @@ before_script:
 
   - rm -rf drupal
 
-  - COMPOSER_MEMORY_LIMIT=-1 composer create-project drupal/recommended-project:8.8.x drupal --stability dev --no-interaction
+  - COMPOSER_MEMORY_LIMIT=-1 composer create-project drupal/recommended-project:$DRUPAL_CORE drupal --stability dev --no-interaction
   - cd drupal
   - COMPOSER_MEMORY_LIMIT=-1 composer require drupal/recurring_events:1.x-dev --no-interaction
   # Install drush
