--- a/.travis.yml
+++ b/.travis.yml
@@ -53,7 +53,7 @@ before_script:
 
   - COMPOSER_MEMORY_LIMIT=-1 composer create-project drupal/recommended-project:$DRUPAL_CORE drupal --stability dev --no-interaction
   - cd drupal
-  - COMPOSER_MEMORY_LIMIT=-1 composer require drupal/recurring_events:1.x-dev --no-interaction
+  - COMPOSER_MEMORY_LIMIT=-1 composer require drupal/$MODULE:1.x-dev --no-interaction
   # Install drush
   - COMPOSER_MEMORY_LIMIT=-1 composer require drush/drush:^9.0
   - DRUPAL_ROOT=$(pwd)
@@ -71,7 +71,7 @@ before_script:
 
 script:
   # Run the PHPUnit tests.
-  - ./vendor/bin/phpunit -c ./web/core/phpunit.xml.dist --verbose --group=recurring_events ./web/modules/contrib/$MODULE
+  - ./vendor/bin/phpunit -c ./web/core/phpunit.xml.dist --verbose --group=$MODULE ./web/modules/contrib/$MODULE
 
   # Check for coding standards. First change directory to our module.
   - cd $DRUPAL_ROOT/web/modules/contrib/$MODULE
