--- a/.travis.yml
+++ b/.travis.yml
@@ -22,6 +22,11 @@ env:
 
 matrix:
   fast_finish: true
+  exclude:
+    - php: 7.1
+      env: DRUPAL_CORE=9.0.x
+    - php: 7.2
+      env: DRUPAL_CORE=9.0.x
 
 # Be sure to cache composer downloads.
 cache:
