Do not use php 7.1 and 7.2 with drupal 9 and drush 10

--- a/.travis.yml
+++ b/.travis.yml
@@ -24,9 +24,9 @@ matrix:
   fast_finish: true
   exclude:
     - php: 7.1
-      env: DRUPAL_CORE=9.0.x
+      env: DRUPAL_CORE=9.0.x DRUSH_VER=10.0
     - php: 7.2
-      env: DRUPAL_CORE=9.0.x
+      env: DRUPAL_CORE=9.0.x DRUSH_VER=10.0
 
 # Be sure to cache composer downloads.
 cache:
