--- a/.travis.yml
+++ b/.travis.yml
@@ -55,6 +55,7 @@ before_script:
   - COMPOSER_MEMORY_LIMIT=-1 composer create-project drupal/recommended-project:$DRUPAL_CORE drupal --stability dev --no-interaction
   - cd drupal
   - COMPOSER_MEMORY_LIMIT=-1 composer require drupal/$MODULE:1.x-dev --no-interaction
+  - COMPOSER_MEMORY_LIMIT=-1 composer require drupal/group
   - COMPOSER_MEMORY_LIMIT=-1 composer require drush/drush:^$DRUSH_VER
   - COMPOSER_MEMORY_LIMIT=-1 composer require mglaman/drupal-check --dev
   - DRUPAL_ROOT=$(pwd)
