--- a/.travis.yml
+++ b/.travis.yml
@@ -54,7 +54,8 @@ before_script:
 
   - COMPOSER_MEMORY_LIMIT=-1 composer create-project drupal/recommended-project:$DRUPAL_CORE drupal --stability dev --no-interaction
   - cd drupal
-  - COMPOSER_MEMORY_LIMIT=-1 composer require drupal/$MODULE:dev-$TRAVIS_BRANCH#$TRAVIS_COMMIT --no-interaction
+  - COMPOSER_MEMORY_LIMIT=-1 composer config repositories.$MODULE vcs https://git.drupalcode.org/project/$MODULE.git
+  - COMPOSER_MEMORY_LIMIT=-1 composer require $MODULE/$MODULE:dev-$TRAVIS_BRANCH#$TRAVIS_COMMIT --no-interaction
   - COMPOSER_MEMORY_LIMIT=-1 composer require drupal/group
   - COMPOSER_MEMORY_LIMIT=-1 composer require drush/drush:^$DRUSH_VER
   - COMPOSER_MEMORY_LIMIT=-1 composer require mglaman/drupal-check --dev
