--- a/.travis.yml
+++ b/.travis.yml
@@ -64,11 +64,7 @@ before_script:
   - COMPOSER_MEMORY_LIMIT=-1 composer require drupal/group
   - COMPOSER_MEMORY_LIMIT=-1 composer require drush/drush:^$DRUSH_VER
   - COMPOSER_MEMORY_LIMIT=-1 composer require mglaman/drupal-check --dev
-  - cd $DRUPAL_ROOT/web/modules/contrib
-  - git clone git@github.com:$TRAVIS_REPO_SLUG
-  - cd $MODULE
-  - git checkout $TRAVIS_COMMIT
-  - cd $DRUPAL_ROOT
+  - cp -R $TRAVIS_BUILD_DIR/$TRAVIS_REPO_SLUG web/modules/contrib/$MODULE
 
   # Coder is already installed as part of composer install. We just need to set
   # the installed_paths to pick up the Drupal standards.
