--- a/.travis.yml
+++ b/.travis.yml
@@ -71,9 +71,6 @@ before_script:
   # the installed_paths to pick up the Drupal standards.
   - $DRUPAL_ROOT/vendor/bin/phpcs --config-set installed_paths $DRUPAL_ROOT/vendor/drupal/coder/coder_sniffer
 
-  # Start a web server on port 8888, run in the background.
-  - php -S localhost:8888 &
-
   # Export web server URL for browser tests.
   - export SIMPLETEST_BASE_URL=http://localhost:8888
 
@@ -84,6 +81,7 @@ script:
   - ./vendor/bin/drush config-set system.performance js.preprocess 0 --yes
   - ./vendor/bin/drush config-set system.logging error_level all --yes
   - ./vendor/bin/drush en simpletest recurring_events recurring_events_registration recurring_events_views --yes
+  - ./vendor/bin/drush runserver --default-server=builtin 8888 > /dev/null &
   - ./vendor/bin/phpunit -c ./web/core/phpunit.xml.dist --verbose --group=$MODULE ./web/modules/contrib/$MODULE
 
   # Run the deprecation checks.
