--- a/.travis.yml
+++ b/.travis.yml
@@ -34,8 +34,6 @@ cache:
     - $HOME/.composer
 
 before_script:
-  - echo $MODULE
-
   # Remove Xdebug as we don't need it and it causes
   # PHP Fatal error:  Maximum function nesting level of '256' reached.
   # We also don't care if that file exists or not on PHP 7.
@@ -50,26 +48,33 @@ before_script:
   # Export database variable for kernel tests.
   - export SIMPLETEST_DB=mysql://root:@127.0.0.1/$MODULE
 
-  - rm -rf drupal
-
+  # Create a new Drupal project using the appropriate version using Composer.
   - COMPOSER_MEMORY_LIMIT=-1 composer create-project drupal/recommended-project:$DRUPAL_CORE drupal --stability dev --no-interaction
   - cd drupal
   - DRUPAL_ROOT=$(pwd)
-  - echo $DRUPAL_ROOT
+
+  # Add the necessary third party dependencies to run these tests.
   - COMPOSER_MEMORY_LIMIT=-1 composer require drupal/field_inheritance
   - COMPOSER_MEMORY_LIMIT=-1 composer require drush/drush:^$DRUSH_VER
   - COMPOSER_MEMORY_LIMIT=-1 composer require mglaman/drupal-check --dev
+
   # Group is not D9 ready yet, without patches, so using composer does not work
-  # at this time. Replace this with:
+  # at this time with Drupal 9. Replace this with:
   # COMPOSER_MEMORY_LIMIT=-1 composer require drupal/group:1.x-dev
   - cd web/modules/contrib/
   - git clone --branch 8.x-1.x https://git.drupalcode.org/project/group.git
   - cd group
+
+  # Patch Group for D9 readiness.
   - curl https://www.drupal.org/files/issues/2020-01-31/group-deprecations-3088226-10.patch > patch.patch
   - patch -p1 < patch.patch
   - rm -rf patch.patch
+
   - cd $DRUPAL_ROOT
-  - cp -R $TRAVIS_BUILD_DIR web/modules/contrib/$MODULE
+
+  # The recurring events module artifact is already available, so symlink it in
+  # to the contrib module directory so we can run our tests.
+  - ln -s $TRAVIS_BUILD_DIR web/modules/contrib/$MODULE
 
   # Coder is already installed as part of composer install. We just need to set
   # the installed_paths to pick up the Drupal standards.
@@ -79,13 +84,19 @@ before_script:
   - export SIMPLETEST_BASE_URL=http://localhost:8888
 
 script:
-  # Run the PHPUnit tests.
-  - ./vendor/bin/drush site-install standard --yes --account-pass=admin --db-url=mysql://root:@127.0.0.1/$MODULE
+  # Install the site using Drush and set up some configuration.
+  - ./vendor/bin/drush site-install standard --yes --account-pass=admin --db-url=$SIMPLETEST_DB
   - ./vendor/bin/drush config-set system.performance css.preprocess 0 --yes
   - ./vendor/bin/drush config-set system.performance js.preprocess 0 --yes
   - ./vendor/bin/drush config-set system.logging error_level all --yes
-  - ./vendor/bin/drush en simpletest recurring_events recurring_events_registration recurring_events_views --yes
+
+  # Enable the modules we care to run the tests.
+  - ./vendor/bin/drush en simpletest $MODULE recurring_events_registration recurring_events_views --yes
+
+  # Start up a HTTP server for tests.
   - ./vendor/bin/drush runserver --default-server=builtin 8888 > /dev/null &
+
+  # Run the PHPUnit tests.
   - ./vendor/bin/phpunit -c ./web/core/phpunit.xml.dist --verbose --group=$MODULE ./web/modules/contrib/$MODULE
 
   # Run the deprecation checks.
