--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -47,29 +47,86 @@ jobs:
       - image: circleci/php:7.2-cli-browsers
     <<: *job-build
 
-  build-php-7.4-legacy:
+  d88-build-php-7.4-legacy:
     <<: *container_config
     environment:
-      DRUPAL_VERSION: 8.8.10
+      DRUPAL_VERSION: 8.8.12
       DRUPAL_PROJECT_SHA: 8.x
     <<: *job-build
 
-  build-php-7.3-legacy:
+  d88-build-php-7.3-legacy:
     <<: *container_config
     docker:
       - image: circleci/php:7.3-cli-browsers
     environment:
-      DRUPAL_VERSION: 8.8.10
+      DRUPAL_VERSION: 8.8.12
       DRUPAL_PROJECT_SHA: 8.x
     <<: *job-build
 
-  build-php-7.2-legacy:
+  d88-build-php-7.2-legacy:
     <<: *container_config
     docker:
       - image: circleci/php:7.2-cli-browsers
     environment:
-      DRUPAL_VERSION: 8.8.10
+      DRUPAL_VERSION: 8.8.12
       DRUPAL_PROJECT_SHA: 8.x
+    <<: *job-build
+
+  d89-build-php-7.4-legacy:
+    <<: *container_config
+    environment:
+      DRUPAL_VERSION: 8.9.10
+      DRUPAL_PROJECT_SHA: 8.x
+    <<: *job-build
+
+  d89-build-php-7.3-legacy:
+    <<: *container_config
+    docker:
+      - image: circleci/php:7.3-cli-browsers
+    environment:
+      DRUPAL_VERSION: 8.9.10
+      DRUPAL_PROJECT_SHA: 8.x
+    <<: *job-build
+
+  d89-build-php-7.2-legacy:
+    <<: *container_config
+    docker:
+      - image: circleci/php:7.2-cli-browsers
+    environment:
+      DRUPAL_VERSION: 8.9.10
+      DRUPAL_PROJECT_SHA: 8.x
+    <<: *job-build
+
+  d90-build-php-7.4-legacy:
+    <<: *container_config
+    environment:
+      DRUPAL_VERSION: 9.0.10
+      DRUPAL_PROJECT_SHA: 2.x
+    <<: *job-build
+
+  d90-build-php-7.3-legacy:
+    <<: *container_config
+    docker:
+      - image: circleci/php:7.3-cli-browsers
+    environment:
+      DRUPAL_VERSION: 9.0.10
+      DRUPAL_PROJECT_SHA: 2.x
+    <<: *job-build
+
+  d91-build-php-7.4-legacy:
+    <<: *container_config
+    environment:
+      DRUPAL_VERSION: 9.1.0
+      DRUPAL_PROJECT_SHA: 2.x
+    <<: *job-build
+
+  d91-build-php-7.3-legacy:
+    <<: *container_config
+    docker:
+      - image: circleci/php:7.3-cli-browsers
+    environment:
+      DRUPAL_VERSION: 9.1.0
+      DRUPAL_PROJECT_SHA: 2.x
     <<: *job-build
 
   deploy:
@@ -84,7 +141,7 @@ jobs:
       - run: DEPLOY_BRANCH=${CIRCLE_BRANCH} .circleci/deploy.sh
 
 workflows:
-  version: 2
+  version: 2.1
   main:
     jobs:
       - build-php-7.4:
@@ -99,15 +156,43 @@ workflows:
           filters:
             tags:
               only: /.*/
-      - build-php-7.4-legacy:
+      - d88-build-php-7.4-legacy:
           filters:
             tags:
               only: /.*/
-      - build-php-7.3-legacy:
+      - d88-build-php-7.3-legacy:
           filters:
             tags:
               only: /.*/
-      - build-php-7.2-legacy:
+      - d88-build-php-7.2-legacy:
+          filters:
+            tags:
+              only: /.*/
+      - d89-build-php-7.4-legacy:
+          filters:
+            tags:
+              only: /.*/
+      - d89-build-php-7.3-legacy:
+          filters:
+            tags:
+              only: /.*/
+      - d89-build-php-7.2-legacy:
+          filters:
+            tags:
+              only: /.*/
+      - d90-build-php-7.4-legacy:
+          filters:
+            tags:
+              only: /.*/
+      - d90-build-php-7.3-legacy:
+          filters:
+            tags:
+              only: /.*/
+      - d91-build-php-7.4-legacy:
+          filters:
+            tags:
+              only: /.*/
+      - d91-build-php-7.3-legacy:
           filters:
             tags:
               only: /.*/
@@ -116,9 +201,9 @@ workflows:
             # - build-php-7.4
             # - build-php-7.3
             # - build-php-7.2
-            # - build-php-7.4-legacy
-            # - build-php-7.3-legacy
-            # - build-php-7.2-legacy
+            # - d88-build-php-7.4-legacy
+            # - d88-build-php-7.3-legacy
+            # - d88-build-php-7.2-legacy
           # filters:
             # tags:
               # only: /.*/
