Restore the project SHA

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -51,6 +51,7 @@ jobs:
     <<: *container_config
     environment:
       DRUPAL_VERSION: 8.8.12
+      DRUPAL_PROJECT_SHA: 8.x
     <<: *job-build
 
   d88-build-php-7.3-legacy:
@@ -59,6 +60,7 @@ jobs:
       - image: circleci/php:7.3-cli-browsers
     environment:
       DRUPAL_VERSION: 8.8.12
+      DRUPAL_PROJECT_SHA: 8.x
     <<: *job-build
 
   d88-build-php-7.2-legacy:
@@ -67,12 +69,14 @@ jobs:
       - image: circleci/php:7.2-cli-browsers
     environment:
       DRUPAL_VERSION: 8.8.12
+      DRUPAL_PROJECT_SHA: 8.x
     <<: *job-build
 
   d89-build-php-7.4-legacy:
     <<: *container_config
     environment:
       DRUPAL_VERSION: 8.9.10
+      DRUPAL_PROJECT_SHA: 8.x
     <<: *job-build
 
   d89-build-php-7.3-legacy:
@@ -81,6 +85,7 @@ jobs:
       - image: circleci/php:7.3-cli-browsers
     environment:
       DRUPAL_VERSION: 8.9.10
+      DRUPAL_PROJECT_SHA: 8.x
     <<: *job-build
 
   d89-build-php-7.2-legacy:
@@ -89,12 +94,14 @@ jobs:
       - image: circleci/php:7.2-cli-browsers
     environment:
       DRUPAL_VERSION: 8.9.10
+      DRUPAL_PROJECT_SHA: 8.x
     <<: *job-build
 
   d90-build-php-7.4-legacy:
     <<: *container_config
     environment:
       DRUPAL_VERSION: 9.0.10
+      DRUPAL_PROJECT_SHA: 9.x
     <<: *job-build
 
   d90-build-php-7.3-legacy:
@@ -103,12 +110,14 @@ jobs:
       - image: circleci/php:7.3-cli-browsers
     environment:
       DRUPAL_VERSION: 9.0.10
+      DRUPAL_PROJECT_SHA: 9.x
     <<: *job-build
 
   d91-build-php-7.4-legacy:
     <<: *container_config
     environment:
       DRUPAL_VERSION: 9.1.0
+      DRUPAL_PROJECT_SHA: 9.x
     <<: *job-build
 
   d91-build-php-7.3-legacy:
@@ -117,6 +126,7 @@ jobs:
       - image: circleci/php:7.3-cli-browsers
     environment:
       DRUPAL_VERSION: 9.1.0
+      DRUPAL_PROJECT_SHA: 9.x
     <<: *job-build
 
   deploy:
