--- a/modules/recurring_events_views/config/install/views.view.event_series.yml
+++ b/modules/recurring_events_views/config/install/views.view.event_series.yml
@@ -70,6 +70,93 @@ display:
           quantity: 9
       style:
         type: table
+        options:
+          grouping: {  }
+          row_class: ''
+          default_row_class: true
+          override: true
+          sticky: false
+          caption: ''
+          summary: ''
+          description: ''
+          columns:
+            title: title
+            type: type
+            recur_type: recur_type
+            eventseries_instance_count: eventseries_instance_count
+            eventseries_start_date: eventseries_start_date
+            uid: uid
+            status: status
+            created: created
+            changed: changed
+            operations: operations
+          info:
+            title:
+              sortable: true
+              default_sort_order: asc
+              align: ''
+              separator: ''
+              empty_column: false
+              responsive: ''
+            type:
+              sortable: true
+              default_sort_order: asc
+              align: ''
+              separator: ''
+              empty_column: false
+              responsive: ''
+            recur_type:
+              sortable: true
+              default_sort_order: asc
+              align: ''
+              separator: ''
+              empty_column: false
+              responsive: ''
+            eventseries_instance_count:
+              align: ''
+              separator: ''
+              empty_column: false
+              responsive: ''
+            eventseries_start_date:
+              align: ''
+              separator: ''
+              empty_column: false
+              responsive: ''
+            uid:
+              sortable: true
+              default_sort_order: asc
+              align: ''
+              separator: ''
+              empty_column: false
+              responsive: ''
+            status:
+              sortable: true
+              default_sort_order: desc
+              align: ''
+              separator: ''
+              empty_column: false
+              responsive: ''
+            created:
+              sortable: true
+              default_sort_order: asc
+              align: ''
+              separator: ''
+              empty_column: false
+              responsive: ''
+            changed:
+              sortable: true
+              default_sort_order: desc
+              align: ''
+              separator: ''
+              empty_column: false
+              responsive: ''
+            operations:
+              align: ''
+              separator: ''
+              empty_column: false
+              responsive: ''
+          default: changed
+          empty_table: false
       row:
         type: fields
       fields:
@@ -998,6 +1085,21 @@ display:
           entity_field: status
           plugin_id: boolean
       sorts:
+        changed:
+          id: changed
+          table: eventseries_field_data
+          field: changed
+          relationship: none
+          group_type: group
+          admin_label: ''
+          order: DESC
+          exposed: false
+          expose:
+            label: ''
+          granularity: second
+          entity_type: eventseries
+          entity_field: changed
+          plugin_id: date
         title:
           id: title
           table: eventseries_field_data
