--- a/modules/recurring_events_registration/modules/recurring_events_reminders/recurring_events_reminders.info.yml
+++ b/modules/recurring_events_registration/modules/recurring_events_reminders/recurring_events_reminders.info.yml
@@ -4,5 +4,5 @@ description: Enables reminders to be sent for upcoming events.
 package: Recurring Events
 core_version_requirement: ^8.9 || ^9
 dependencies:
-  - recurring_events
-  - recurring_events_registration
+  - recurring_events:recurring_events
+  - recurring_events:recurring_events_registration
