Switch out PHPUnit tests for Kernel tests, remove group submodule tests

--- a/modules/group_recurring_events_series/group_recurring_events_series.info.yml
+++ b/modules/group_recurring_events_series/group_recurring_events_series.info.yml
@@ -4,5 +4,5 @@ package: 'Group'
 type: 'module'
 core_version_requirement: ^8.9 || ^9
 dependencies:
-  - 'drupal:recurring_events'
+  - 'recurring_events:recurring_events'
   - 'group:group'
