Issue #3232708 by ryankavalsky, owenbush: Granting Permission to Registrant Page

--- a/modules/recurring_events_registration/recurring_events_registration.permissions.yml
+++ b/modules/recurring_events_registration/recurring_events_registration.permissions.yml
@@ -1,4 +1,7 @@
 # Registrant Entities.
+view registrant entities:
+  title: 'View registrant entities'
+  description: 'View registrant entities'
 add registrant entities:
   title: 'Create new registrant entities'
   description: 'Create new registrant entities'
