Issue #3257860 by endless_wander, owenbush: Tabs don't appear on entity type pages

--- a/modules/recurring_events_registration/recurring_events_registration.links.task.yml
+++ b/modules/recurring_events_registration/recurring_events_registration.links.task.yml
@@ -51,3 +51,9 @@ entity.registrant.collection:
   title: Registrations
   route_name: entity.registrant.admin_collection
   base_route: system.admin_content
+
+# Registrant type edit link
+entity.registrant_type.edit_form:
+  title: 'Edit'
+  route_name: entity.registrant_type.edit_form
+  base_route: entity.registrant_type.edit_form
