Issue #3261199 by jrb, owenbush: All users with the "access administration pages" permission can see Events admin overview page, even if they don't have access to manage any event entities

--- a/recurring_events.routing.yml
+++ b/recurring_events.routing.yml
@@ -171,7 +171,7 @@ events.admin.overview:
     _title: 'Events Management'
     _controller: '\Drupal\recurring_events\Controller\EventSeriesController::adminPage'
   requirements:
-    _permission: 'access administration pages'
+    _permission: 'administer eventseries entity+administer eventseries types+administer eventinstance entity+administer eventinstance types+administer registrant entity+administer registrant types'
 
 # Global admin content page.
 events.admin.content:
